feat: implementation header with reactstrap and styled components

--- a/client/src/normalize.css
+++ b/client/src/normalize.css
@@ -102,6 +102,10 @@ a {
   /* 2 */
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 /**
    * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
    * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
