--- a/client/src/style/normalize.css
+++ b/client/src/style/normalize.css
@@ -497,10 +497,10 @@ li {
 }
 
 button,
-input[type='button'],
-input[type='reset'],
-input[type='submit'],
-input[type='radio'] {
+input[type="button"],
+input[type="reset"],
+input[type="submit"],
+input[type="radio"] {
   color: inherit;
   cursor: pointer;
   font: inherit;
